Addressed these issues:
Logo duplication on menu open
Training logo overlap
Home mac (remove logo), put rise above horizon
Mobile social links not clickable
Student review to fetch information from system
Rise above horizon on load

Mobile:
On load logo alignment
Links not clickable
Links to open on new tab
Touch click does not remove menu
Show logo on menu
Overlay code

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -2,9 +2,8 @@
 
 @media (max-width: 1140px) {
 
-
     body {
-        background-position-y: 0!important;
+        background-position-y: 0 !important;
     }
 
     #fp-nav {
@@ -12,7 +11,7 @@
     }
 
     #social-icons,
-#logo {
+    #logo {
         position: fixed;
         width: 100%;
         left: 0;
@@ -25,14 +24,14 @@
     }
 
     .fp-slidesNav {
-        margin-left: -45%!important;
+        margin-left: -45% !important;
         left: 50%;
         bottom: 0;
         top: 55%;
     }
 
     .sidr-open .wrap,
-.wrap {
+    .wrap {
         width: 90%;
     }
 
@@ -51,7 +50,8 @@
         right: 2.5%;
         margin-left: inherit;
     }
-    .fp-tableCell{
+
+    .fp-tableCell {
         position: relative;
         z-index: 1;
     }
@@ -64,20 +64,20 @@
     }
 
     #hand,
-.screenshots-wrapper,
-.section-image {
+    .screenshots-wrapper,
+    .section-image {
         display: none;
     }
 
     .sidr-open .wrap .box,
-.box {
+    .box {
         width: 100%;
         text-align: center;
         font-size: 14px;
     }
 
     #menu-logo {
-        display: none;
+        width: 100%;
     }
 
     .sidr ul {
@@ -131,7 +131,7 @@
     }
 
     .fp-slidesNav {
-        margin-left: -5%!important;
+        margin-left: -5% !important;
         left: 50%;
         bottom: 0;
         top: 55%;
@@ -170,8 +170,12 @@
 }
 
 @media (min-width: 320px) and (max-width: 640px) {
-  
-
+    .preloader img{
+        width: 90%;
+    }
+    .preloader p{
+        font-size: 1.5rem;
+    }
     h1, h2, h3 {
         font-size: 26px;
         line-height: 1;
@@ -190,7 +194,7 @@
     }
 
     .playstore,
-.appstore {
+    .appstore {
         margin-top: -4px;
     }
 
@@ -204,7 +208,7 @@
     }
 
     #logo {
-        top: 3%;
+        top: 0%;
     }
 
     #logo img {
@@ -233,7 +237,7 @@
     }
 
     #main-nav:hover span {
-        color: inherit!important;
+        color: inherit !important;
     }
 
     .sidr ul li {
