--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,12 +50,24 @@ a {
 }
 strong { font-family: 'Abel', sans-serif; font-weight: 700  }
 body {
-    background: url(../images/background/forex-chart-1.png);
+    background: url(../images/background/KWDForex-bg.jpg);
     background-size: cover;
     color: #333;
     font-family: 'Abel', sans-serif;
     font-weight: 300;
 }
+body:after {
+
+    content: '';
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.45);
+    position: absolute;
+    z-index: -2;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -91,12 +103,13 @@ h1,
 h2,
 h3 {
     color: #ffffff;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-size: 50px;
     font-weight: normal;
     font-family: 'Abel', sans-serif; font-weight: 300;
     line-height: 1.2;
     margin-top: 20px;
+    white-space: nowrap;
 }
 h4,
 h5,
@@ -177,22 +190,33 @@ h6 { font-weight: 300 }
 
 #preloader {
     position: fixed;
-    z-index: 1000;
+    z-index: 999999;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: #000;
+    display: table;
 }
-#preloader img {
-    position: absolute;
-    top: 35%;
-    left: 35%;
+.preloader {
+    width: 100%;
+    text-align: center;
+    height: 100vh;
+    display: table-cell;
+    vertical-align: middle;
+}
+.preloader img{
+}
+.preloader p {
+    color: #fff;
+    font-size: 2.5rem;
+    margin-top: 0;
 }
 
 /*Logo   */
 
 #logo {
-    position: fixed;
-    top: 2%;
+    position: relative;
+    top: 0%;
+    left: 1%;
 }
 #logo a img{
     width:20em;
@@ -203,6 +227,7 @@ h6 { font-weight: 300 }
 #social-icons {
     position: fixed;
     bottom: 2%;
+    z-index: 5;
 }
 #social-icons ul {
     padding: 0;
@@ -761,7 +786,7 @@ SECTIONS
     margin-right: 50px;
     margin-bottom: 0;
 }
-.features li { margin-bottom: 10px }
+.features li { margin-bottom: 0px }
 
 /*Clients feedbacks*/
 
@@ -770,6 +795,9 @@ SECTIONS
 .students-content .fp-tableCell { height: 100%!important }
 .student-stars { float: right }
 .students-content p { margin-top: 0 }
+.students-content .box{
+    width: 100%;
+}
 
 /* Video Presentation*/
 
@@ -792,6 +820,15 @@ SECTIONS
     height: 289px;
     /* margin-left: 11rem; */
     border-radius: 1px;
+}
+.section-image:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0, .2);
 }
 .screenshots-wrapper img,
 .section-image img {
